2006-07-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R("["): disable ("Matrix", i = "logical", j = "missing"),
		since that wrongly triggers also for M[ logi , ]

	* R/denseMatrix.R: "[" methods now also work e.g. when indexing
	a symmetric matrix that results in a non-symmetric one.
	* R/Auxiliaries.R (as_geClass): new function used in "[" above.

	* R/dMatrix.R: make round(M) work as round(M, 0)

	* R/dgTMatrix.R (image): coordinate system and axis now use
	1-based indices, not 0-based ones.

	* R/Tsparse.R (.ind.prep for "["): get rid of max(<empty>) warning.
	* tests/indexing.R: test it.

	* NAMESPACE: export isSymmetric(); has been a generic in "base"	for a while;
	* man/isSymmetric-methods.Rd: and document it.

	* R/SparseM-conv.R: added coercion methods for some 'SparseM' matrices.
	* man/SparseM-conv.Rd: docu them

	* tests/other-pkgs.R: renamed from tests/graph.R and add example
		for 'SparseM' conversions

2006-07-17  Douglas Bates  <Douglas.Bates@R-project.org>

	* R/Matrix.R (head): added head() and tail() methods.

2006-07-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.995-12 released to CRAN

2006-07-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/simple.R: add check for correct dsT -> dgT coercion;
		add check for correct printing of symmetric sparse matrices.

	* R/Auxiliaries.R (non0ind): return *all* non-0 entry indices also
	for sparse symmetric matrices.

	* src/dsTMatrix.c (dsTMatrix_as_dgTMatrix): do not copy the
	diagonal twice.

2006-07-11  Douglas Bates  <Douglas.Bates@R-project.org>

	* src/dsTMatrix.c (dsTMatrix_as_dgTMatrix): Fix a case of INTEGER
	being applied to the x slot (detected by Brian Ripley).

2006-07-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dgCMatrix.c (dgCMatrix_validate): 'p' slot must have correct length.

	* R/Auxiliaries.R (isTriC): fix buglet (we were 1-based!)

2006-07-08  Martin Maechler  <maechler@stat.math.ethz.ch>
